<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="about">About</string>
	<string name="actions">Actions</string>
	<string name="active">Active</string>
	<string name="active_count">Active: <xliff:g example="1" id="active">%1$s</xliff:g></string>
	<string name="active_paused">Active/Paused</string>
	<string name="actors">Actors: <xliff:g example="Kat Dennings, Beth Behrs, Garrett Morris, Jonathan Kite" id="actors">%1$s</xliff:g></string>
	<string name="add">Add</string>
	<string name="add_show">Add show</string>
	<string name="airs">Airs: <xliff:g example="Monday 8:00 PM" id="airs">%1$s</xliff:g></string>
	<string name="all">All</string>
	<string name="allowed_quality">Allowed quality</string>
	<string name="anime">Anime</string>
	<string name="animes">Animes</string>
	<string name="api_key">API Key</string>
	<string name="archived">Archived</string>
	<string name="ascending">Ascending</string>
	<string name="awards">Awards</string>
	<string name="banner">Banner</string>
	<string name="behavior">Behavior</string>
	<string name="cancel">Cancel</string>
	<string name="casting">Casting</string>
	<string name="change">Change</string>
	<string name="change_quality">Change quality</string>
	<string name="change_quality_info">Set both to \"Ignore\" to use SickRage\'s default quality setting.</string>
	<string name="check_update">Check for update</string>
	<string name="clear">Clear</string>
	<string name="clear_history_confirm">Are you sure you want to clear SickRage\'s history?</string>
	<string name="clear_local_data">Clear local data</string>
	<string name="clear_local_data_confirm">Are you sure you want to clear the data stored on your device?\nThis won\'t impact the data on SickRage.</string>
	<string name="close">Close</string>
	<string name="close_menu">Close menu</string>
	<string name="connecting_to">Connecting to <xliff:g example="http://127.0.0.1/" id="url">%1$s</xliff:g>…</string>
	<string name="connection_failed">Connection to <xliff:g example="http://127.0.0.1/" id="url">%1$s</xliff:g> failed</string>
	<string name="connection_successful">Connection successful!</string>
	<string name="continuing">Continuing</string>
	<string name="copy">Copy</string>
	<string name="dark_theme">Dark theme</string>
	<string name="day_1">Once a day</string>
	<string name="debug">Debug</string>
	<string name="default_">Default</string>
	<string name="delete">Delete</string>
	<string name="delete_show">Delete show</string>
	<string name="delete_show_message">Do you want to keep the files related to this show?</string>
	<string name="delete_show_title">Delete \"<xliff:g example="2 Broke Girls" id="show_name">%1$s</xliff:g>\"</string>
	<string name="descending">Descending</string>
	<string name="developer">Developer</string>
	<string name="directors">Directors: <xliff:g example="N/A" id="directors">%1$s</xliff:g></string>
	<string name="display">Display</string>
	<string name="downloaded">Downloaded</string>
	<string name="downloaded_count">Downloaded: <xliff:g example="1" id="downloaded">%1$s</xliff:g> (<xliff:g example="50" id="percent">%2$s</xliff:g>%%)</string>
	<string name="ended">Ended</string>
	<string name="episode">Episode</string>
	<string name="episode_name">E<xliff:g example="01" id="number">%1$02d</xliff:g> - <xliff:g example="Pilot" id="name">%2$s</xliff:g></string>
	<string name="episode_name_short">E<xliff:g example="01" id="number">%1$02d</xliff:g></string>
	<string name="episode_search">Searching for episode <xliff:g example="1" id="episode">%1$d</xliff:g> in season <xliff:g example="1" id="season">%2$d</xliff:g></string>
	<string name="episodes">Episodes</string>
	<string name="episodes_sort">Episodes sort</string>
	<string name="error">Error</string>
	<string name="experimental_features">Experimental features</string>
	<string name="external_links">External Links</string>
	<string name="failed">Failed</string>
	<string name="file_size">File size: <xliff:g example="856.93 MB" id="file_size">%1$s</xliff:g></string>
	<string name="filter">Filter</string>
	<string name="force_processing">Force processing</string>
	<string name="genre">Genre: <xliff:g example="Comedy" id="genre">%1$s</xliff:g></string>
	<string name="get_api_key">Get API Key</string>
	<string name="get_api_key_error">Unable to get the API Key</string>
	<string name="get_api_key_success">API Key successfully received</string>
	<string name="hard_link">Hard link</string>
	<string name="help">Help</string>
	<string name="history">History</string>
	<string name="hostname">Hostname</string>
	<string name="hours_6">Every 3 hours</string>
	<string name="hours_12">Every 12 hours</string>
	<string name="ignore">Ignore</string>
	<string name="ignore_articles">Ignore articles when sorting</string>
	<string name="ignored">Ignored</string>
	<string name="ignored_articles">\"A\", \"An\", \"The\"</string>
	<string name="info">Info</string>
	<string name="keep">Keep</string>
	<string name="language">Language</string>
	<string name="language_county">Language: <xliff:g example="English" id="language">%1$s</xliff:g> (<xliff:g example="USA" id="country">%2$s</xliff:g>)</string>
	<string name="language_value">Language: <xliff:g example="English" id="language">%1$s</xliff:g></string>
	<string name="later">Later</string>
	<string name="licenses">Licenses</string>
	<string name="light_theme">Light theme</string>
	<string name="loading">Loading…</string>
	<string name="location">Location: <xliff:g example="/Shows/2 Broke Girls" id="location">%1$s</xliff:g></string>
	<string name="logo_designer">Logo designer</string>
	<string name="logs">Logs</string>
	<string name="logs_auto_update">Logs auto-update</string>
	<string name="minute_1">Every 1 minute</string>
	<string name="minute_2">Every 2 minutes</string>
	<string name="minute_5">Every 5 minutes</string>
	<string name="missed">Missed</string>
	<string name="missing">Missing: <xliff:g example="1" id="missing">%1$s</xliff:g> (<xliff:g example="50" id="percent">%2$s</xliff:g>%%)</string>
	<string name="more_information">More Information</string>
	<string name="move">Move</string>
	<string name="network">Network: <xliff:g example="CBS" id="network">%1$s</xliff:g></string>
	<string name="never">Never</string>
	<string name="new_update">New update available</string>
	<string name="next_episode">Next episode: <xliff:g example="in 2 days" id="next_episode">%1$s</xliff:g></string>
	<string name="no">No</string>
	<string name="no_coming_episodes">No coming episodes</string>
	<string name="no_episodes">No episodes</string>
	<string name="no_history">No history</string>
	<string name="no_logs">No logs</string>
	<string name="no_results">No results</string>
	<string name="no_plot">No plot</string>
	<string name="no_shows">No shows</string>
	<string name="no_update">No new update</string>
	<string name="open_menu">Open menu</string>
	<string name="password">Password</string>
	<string name="path">Path</string>
	<string name="path_help">If not sure, keep the default value: \"api\".</string>
	<string name="pause_show">Pause show</string>
	<string name="paused">Paused</string>
	<string name="play_video">Play video</string>
	<string name="please_wait">Please wait…</string>
	<string name="plot">Plot</string>
	<string name="port_number">Port Number</string>
	<string name="post_processing">Post Processing</string>
	<string name="poster">Poster</string>
	<string name="preferred_quality">Preferred quality</string>
	<string name="process">Process</string>
	<string name="processing_method">Processing method</string>
	<string name="provider_quality">From <xliff:g example="KAT" id="provider">%1$s</xliff:g> [<xliff:g example="1080p WEB-DL" id="quality">%2$s</xliff:g>]</string>
	<string name="quality">Quality: <xliff:g example="HD1080p" id="quality">%1$s</xliff:g></string>
	<string name="quality_custom">Quality:\n- Allowed: <xliff:g example="HD1080p" id="allowed">%1$s</xliff:g>\n- Preferred: <xliff:g example="HD1080p" id="preferred">%2$s</xliff:g></string>
	<string name="rated">Rated: <xliff:g example="TV-14" id="rated">%1$s</xliff:g></string>
	<string name="rating">IMDb Rating: <xliff:g example="5.0" id="rating">%1$s</xliff:g>/10 (<xliff:g example="10000" id="votes">%2$s</xliff:g> votes)</string>
	<string name="refresh">Refresh</string>
	<string name="remote_control">Remote Control</string>
	<string name="replace">Replace</string>
	<string name="replace_existing_episode">Replace the current episode if it was already downloaded?</string>
	<string name="replace_existing_files">Replace existing files</string>
	<string name="rescan">Rescan</string>
	<string name="restart">Restart</string>
	<string name="restart_confirm">Are you sure you want to restart SickRage?</string>
	<string name="resume_show">Resume show</string>
	<string name="root_directory">Root directory</string>
	<string name="runtime">Runtime: <xliff:g example="22 min" id="runtime">%1$s</xliff:g></string>
	<string name="schedule">Schedule</string>
	<string name="search">Search</string>
	<string name="search_episode">Search episode</string>
	<string name="search_show">Search show</string>
	<string name="search_subtitles">Search subtitles</string>
	<string name="season_episode_name">S<xliff:g example="01" id="season">%1$02d</xliff:g>E<xliff:g example="01" id="episode">%2$02d</xliff:g> - <xliff:g example="Pilot" id="name">%3$s</xliff:g></string>
	<string name="season_number">Season %1$d</string>
	<string name="seasons_sort">Seasons sort</string>
	<string name="seconds_30">Every 30 seconds</string>
	<string name="self_signed_certificate">Self-signed certificate?</string>
	<string name="server">Server</string>
	<string name="server_information">Server Information</string>
	<string name="set_status">Set status</string>
	<string name="settings">Settings</string>
	<string name="show">Show</string>
	<string name="show_name_episode"><xliff:g example="2 Broke Girls" id="show_name">%1$s</xliff:g> - S<xliff:g example="01" id="season">%2$02d</xliff:g>E<xliff:g example="01" id="episode">%3$02d</xliff:g></string>
	<string name="shows">Shows</string>
	<string name="shows_list_layout">Shows list layout</string>
	<string name="sickrage_4030_required">This feature requires SickRage version 4.0.30</string>
	<string name="sickrage_updated">SickRage was successfully updated</string>
	<string name="skipped">Skipped</string>
	<string name="snatched">Snatched</string>
	<string name="snatched_count">Snatched: <xliff:g example="1" id="snatched">%1$s</xliff:g> (<xliff:g example="50" id="percent">%2$s</xliff:g>%%)</string>
	<string name="snatched_proper">Snatched (proper)</string>
	<string name="soon">Soon</string>
	<string name="specials">Specials</string>
	<string name="split_shows_animes">Split shows &amp; animes</string>
	<string name="statistics">Statistics</string>
	<string name="status">Status</string>
	<string name="status_value">Status: <xliff:g example="Continuing" id="status">%1$s</xliff:g></string>
	<string name="stream_in_chromecast">Stream over Google Cast™</string>
	<string name="subtitled">Subtitled</string>
	<string name="subtitles">Subtitles</string>
	<string name="subtitles_search">Searching for subtitles for episode <xliff:g example="1" id="episode">%1$d</xliff:g> in season <xliff:g example="1" id="season">%2$d</xliff:g></string>
	<string name="subtitles_value">Subtitles: <xliff:g example="Yes" id="subtitles">%1$s</xliff:g></string>
	<string name="symbolic_link">Symbolic link</string>
	<string name="test">Test</string>
	<string name="testing_server_settings">Testing server settings</string>
	<string name="theme">Theme</string>
	<string name="today">Today</string>
	<string name="unknown">Unknown</string>
	<string name="update">Update</string>
	<string name="use_basic_auth">Use basic authentication?</string>
	<string name="use_https">Use HTTPS?</string>
	<string name="username">Username</string>
	<string name="version">Version</string>
	<string name="wanted">Wanted</string>
	<string name="website">Website</string>
</resources>