<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/menu_episode_search"
		android:title="@string/search_episode" />
	<item
		android:id="@+id/menu_subtitles_search"
		android:title="@string/search_subtitles" />
	<item android:title="@string/set_status">
		<menu>
			<group>
				<item
					android:id="@+id/menu_episode_set_status_wanted"
					android:title="@string/wanted" />
				<item
					android:id="@+id/menu_episode_set_status_skipped"
					android:title="@string/skipped" />
				<item
					android:id="@+id/menu_episode_set_status_ignored"
					android:title="@string/ignored" />
				<item
					android:id="@+id/menu_episode_set_status_failed"
					android:title="@string/failed" />
			</group>
		</menu>
	</item>
</menu>