<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">
	<group
		android:id="@+id/menu_sections"
		android:checkableBehavior="single">
		<item
			android:id="@+id/menu_shows"
			android:icon="@drawable/ic_tv_white_24dp"
			android:title="@string/shows" />

		<item
			android:id="@+id/menu_schedule"
			android:icon="@drawable/ic_schedule_white_24dp"
			android:title="@string/schedule" />

		<item
			android:id="@+id/menu_history"
			android:icon="@drawable/ic_history_white_24dp"
			android:title="@string/history" />

		<item
			android:id="@+id/menu_logs"
			android:icon="@drawable/ic_list_white_24dp"
			android:title="@string/logs" />

		<item
			android:id="@+id/menu_statistics"
			android:icon="@drawable/ic_trending_up_white_24dp"
			android:title="@string/statistics" />
	</group>

	<group
		android:id="@+id/menu_actions"
		android:checkableBehavior="single">
		<item
			android:id="@+id/menu_settings"
			android:icon="@drawable/ic_settings_white_24dp"
			android:title="@string/settings" />

		<item
			android:id="@+id/menu_post_processing"
			android:icon="@drawable/ic_tune_white_24dp"
			android:title="@string/post_processing" />

		<item
			android:id="@+id/menu_check_update"
			android:icon="@drawable/ic_system_update_white_24dp"
			android:title="@string/check_update" />

		<item
			android:id="@+id/menu_restart"
			android:icon="@drawable/ic_replay_white_24dp"
			android:title="@string/restart" />

		<item
			android:id="@+id/menu_kolumbus"
			android:icon="@drawable/ic_explore_24dp"
			android:title="@string/kolumbus"
			android:visible="@bool/debug"
			tools:visible="true" />
	</group>
</menu>
