<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group
		android:id="@+id/filter_paused_active"
		android:checkableBehavior="single">
		<item
			android:id="@+id/filter_paused"
			android:icon="@drawable/ic_pause_white_24dp"
			android:title="@string/paused"/>

		<item
			android:id="@+id/filter_active"
			android:icon="@drawable/ic_play_arrow_white_24dp"
			android:title="@string/active"/>

		<item
			android:id="@+id/filter_all"
			android:checked="true"
			android:icon="@drawable/ic_done_all_white_24dp"
			android:title="@string/all"/>
	</group>

	<group
		android:id="@+id/filter_status"
		android:checkableBehavior="single">
		<item
			android:id="@+id/filter_status_continuing"
			android:icon="@drawable/ic_loop_white_24dp"
			android:title="@string/continuing"/>

		<item
			android:id="@+id/filter_status_ended"
			android:icon="@drawable/ic_stop_white_24dp"
			android:title="@string/ended"/>

		<item
			android:id="@+id/filter_status_unknown"
			android:icon="@drawable/ic_help_outline_white_24dp"
			android:title="@string/unknown"/>

		<item
			android:id="@+id/filter_status_all"
			android:checked="true"
			android:icon="@drawable/ic_done_all_white_24dp"
			android:title="@string/all"/>
	</group>
</menu>
