<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/padding"
	tools:context="com.mgaetan89.showsrage.fragment.ShowsFiltersFragment">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/padding_half"
		android:layout_marginLeft="@dimen/padding_half"
		android:layout_marginBottom="@dimen/padding_half"
		android:text="@string/active_paused"
		android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

	<RadioGroup
		android:id="@+id/filter_active_paused"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<RadioButton
			android:id="@+id/filter_active"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/active" />

		<RadioButton
			android:id="@+id/filter_paused"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/paused" />

		<RadioButton
			android:id="@+id/filter_all"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/all" />
	</RadioGroup>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/padding_half"
		android:layout_marginLeft="@dimen/padding_half"
		android:layout_marginTop="@dimen/padding"
		android:layout_marginBottom="@dimen/padding_half"
		android:text="@string/status"
		android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

	<CheckBox
		android:id="@+id/filter_status_continuing"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/continuing" />

	<CheckBox
		android:id="@+id/filter_status_ended"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/ended" />

	<CheckBox
		android:id="@+id/filter_status_unknown"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/unknown" />

	<CheckBox
		android:id="@+id/filter_status_all"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/all" />
</LinearLayout>
