<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.mgaetan89.showsrage.fragment.EpisodeDetailFragment">

	<data>

		<variable
			name="episode"
			type="com.mgaetan89.showsrage.presenter.EpisodePresenter"/>
	</data>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clipToPadding="false"
			android:paddingBottom="@dimen/fab_spacing">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingEnd="@dimen/padding"
				android:paddingLeft="@dimen/padding"
				android:paddingRight="@dimen/padding"
				android:paddingStart="@dimen/padding"
				android:paddingTop="@dimen/padding">

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/padding">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/padding"
						android:orientation="vertical">

						<TextView
							style="@style/TextAppearance.AppCompat.Subhead.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginBottom="@dimen/padding_half"
							android:text="@{episode.name}"
							android:visibility="@{episode.nameVisibility}"
							tools:text="Pilot"
							tools:visibility="visible"/>

						<TextView
							style="@style/TextAppearance.AppCompat.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginBottom="@dimen/padding_half"
							android:text="@{@string/airs(episode.airDate)}"
							android:visibility="@{episode.airDateVisibility}"
							tools:text="@string/airs"
							tools:visibility="visible"/>

						<TextView
							style="@style/TextAppearance.AppCompat.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginBottom="@dimen/padding_half"
							android:text="@{@string/status_value(episode.status)}"
							android:visibility="@{episode.statusVisibility}"
							tools:text="@string/status_value"
							tools:visibility="visible"/>

						<TextView
							style="@style/TextAppearance.AppCompat.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@{@string/quality(episode.quality)}"
							android:visibility="@{episode.qualityVisibility}"
							tools:text="@string/quality"
							tools:visibility="visible"/>
					</LinearLayout>
				</android.support.v7.widget.CardView>

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/padding"
					android:visibility="@{episode.plotVisibility}"
					tools:visibility="visible">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/padding"
						android:orientation="vertical">

						<TextView
							style="@style/TextAppearance.AppCompat.Subhead.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginBottom="@dimen/padding_half"
							android:text="@string/plot"/>

						<TextView
							style="@style/TextAppearance.AppCompat.Inverse"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@{episode.plot}"
							tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet nisi et arcu gravida dictum. Vestibulum vitae odio quis augue porta tincidunt eu pulvinar odio."/>
					</LinearLayout>
				</android.support.v7.widget.CardView>

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:visibility="@{episode.fileSizeLocationVisibility}"
					tools:visibility="visible">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/padding"
						android:orientation="vertical">

						<TextView
							style="@style/TextAppearance.AppCompat.Subhead.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginBottom="@dimen/padding_half"
							android:text="@string/more_information"/>

						<TextView
							style="@style/TextAppearance.AppCompat.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginBottom="@dimen/padding_half"
							android:text="@{@string/file_size(episode.fileSize)}"
							tools:text="@string/file_size"/>

						<TextView
							style="@style/TextAppearance.AppCompat.Inverse"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@{@string/location(episode.location)}"
							tools:text="@string/location"/>
					</LinearLayout>
				</android.support.v7.widget.CardView>
			</LinearLayout>
		</ScrollView>

		<android.support.design.widget.FloatingActionButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|end|right"
			android:layout_margin="@dimen/fab_margin"
			android:onClick="@{episode.searchEpisode}"
			android:src="@drawable/ic_search_white_24dp"
			android:tint="@android:color/black"/>
	</FrameLayout>
</layout>
