<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="@dimen/padding"
	tools:context="com.mgaetan89.showsrage.fragment.PostProcessingFragment">

	<TextView
		android:id="@+id/processing_method_label"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/padding"
		android:layout_marginTop="@dimen/padding"
		android:layout_marginEnd="@dimen/padding"
		android:text="@string/processing_method"
		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Spinner
		android:id="@+id/processing_method"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:entries="@array/processing_methods_keys"
		app:layout_constraintStart_toStartOf="@+id/processing_method_label"
		app:layout_constraintTop_toBottomOf="@+id/processing_method_label"
		tools:listitem="@android:layout/simple_list_item_1" />

	<android.support.v7.widget.SwitchCompat
		android:id="@+id/force_processing"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/padding"
		android:text="@string/force_processing"
		app:layout_constraintEnd_toEndOf="@+id/processing_method_label"
		app:layout_constraintStart_toStartOf="@+id/processing_method_label"
		app:layout_constraintTop_toBottomOf="@+id/processing_method" />

	<android.support.v7.widget.SwitchCompat
		android:id="@+id/replace_files"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/padding"
		android:text="@string/replace_existing_files"
		app:layout_constraintEnd_toEndOf="@+id/processing_method_label"
		app:layout_constraintStart_toStartOf="@+id/processing_method_label"
		app:layout_constraintTop_toBottomOf="@+id/force_processing" />
</android.support.constraint.ConstraintLayout>
